--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">first git</string>
+    <string name="hello_good_day">Hello! good day</string>
 </resources>
